# yapit-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/yapit/: __init__.py  __main__.py  cli.py
